test/files/neg/t6289/SUT_5.scala

/** The System Under Test.
 *  We bail on the earlier round that generates the first error.
 */
class SUT extends J
